--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -2,67 +2,108 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
+        <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <!-- build:css({app,.tmp}) /css/main.css -->
-        <!-- Syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="shortcut icon" href="/favicon.ico">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- build:css(.) /css/vendor.css -->
+        <!-- bower:css -->
+        <!-- endbower -->
+        <!-- endbuild -->
 
-        <!-- Custom CSS -->
+        <!-- build:css(.tmp) /css/main.css -->
         <link rel="stylesheet" href="/css/main.css">
         <!-- endbuild -->
 
     </head>
     <body>
 
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
+      <header id="cover" class="home clearfix">
+        <h1 id="logo" class="hide"><a href="/">Centro</a></h1>
 
+        <a href="#menu" id="menu-icon" class="white">Abrir Menu</a>
+      </header>
+
+      <nav id="menu">
+        <a href="" class="close">&times;</a>
+
+        <dl>
+          <dt><a href="/">Início</a></dt>
+        </dl>
+        <dl>
+          <dt><a href="">Sobre</a></dt>
+        </dl>
+        <dl>
+          <dt><a href="#">Projetos</a></dt>
+          <dd><a href="#">Amarello</a></dd>
+          <dd><a href="#">Arnold</a></dd>
+          <dd><a href="#">Balsa</a></dd>
+          <dd><a href="/casa-do-povo">Casa do Povo</a></dd>
+          <dd><a href="#">Eduqativo</a></dd>
+          <dd><a href="#">Esparrama</a></dd>
+          <dd><a href="#">Fluxo</a></dd>
+          <dd><a href="#">Garagem</a></dd>
+          <dd><a href="#">Lâmina</a></dd>
+          <dd><a href="#">Mandíbula</a></dd>
+          <dd><a href="#">Ouvidor</a></dd>
+          <dd><a href="#">Overground</a></dd>
+          <dd><a href="#">Paperbox</a></dd>
+          <dd><a href="#">Pessoal <br>do Faroeste</a></dd>
+          <dd><a href="#">Phosphorus</a></dd>
+          <dd><a href="#">Pivô</a></dd>
+          <dd><a href="#">Pública</a></dd>
+          <dd><a href="#">Pum</a></dd>
+        </dl>
+        <dl>
+          <dt><a href="">Mapa</a></dt>
+        </dl>
+        <dl>
+          <dt><a href="">Contato</a></dt>
+          <dd><a href="">email</a></dd>
+          <dd><a href="">facebook</a></dd>
+        </dl>
+      </nav>
+
+      <main id="main">
+        <div class="container">
           {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                centro<br />
-                <a href="mailto:bruno.germano@gmail.com">bruno.germano@gmail.com</a>
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
         </div>
+      </main>
 
-    <!-- build:js(.) /js/vendor.js -->
-    <!-- bower:js -->
-    <script src="_bower_components/jquery/dist/jquery.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="_bower_components/lodash/lodash.js"></script>
-    <!-- endbower -->
-    <script src="_bower_components/preload/jquery.preload.js"></script>
-    <!-- endbuild -->
 
-    <!-- build:js(app) /js/scripts.js -->
-    <script src="/js/main.js"></script>
-    <!-- endbuild -->
+
+
+      <footer id="main">
+        <div class="container">
+          <p class="text-center">CENTRO – 2014-2015</p>
+          <p class="text-center">Criado no centro de São Paulo. Licenciado em Creative Commons.</p>
+        </div>
+      </footer>
+
+      <!-- build:js(.) /js/vendor.js -->
+      <!-- bower:js -->
+      <script src="_bower_components/jquery/dist/jquery.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js"></script>
+      <script src="_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js"></script>
+      <script src="_bower_components/lodash/lodash.js"></script>
+      <!-- endbower -->
+      <script src="_bower_components/preload/jquery.preload.js"></script>
+      <!-- endbuild -->
+
+      <!-- build:js(app) /js/scripts.js -->
+      <script src="/js/main.js"></script>
+      <!-- endbuild -->
     </body>
 </html>
