--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -102,6 +102,16 @@
       <script src="_bower_components/preload/jquery.preload.js"></script>
       <!-- endbuild -->
 
+      <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+      <script>
+        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+        ga('create','UA-XXXXX-X');ga('send','pageview');
+      </script>
+
       <!-- build:js(app) /js/scripts.js -->
       <script src="/js/main.js"></script>
       <!-- endbuild -->
