--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -2,8 +2,8 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>centro cx</title>
-    <meta name="description" content="">
+    <title>{{ page.title }} | CENTRO</title>
+    <meta name="description" content="{{ page.title }} {{ page.description }}">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
