update build paths

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -8,12 +8,12 @@
 
         <link rel="shortcut icon" href="/favicon.ico">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <!-- build:css(.) /css/vendor.css -->
+        <!-- build:css(.) css/vendor.css -->
         <!-- bower:css -->
         <!-- endbower -->
         <!-- endbuild -->
 
-        <!-- build:css(.tmp) /css/main.css -->
+        <!-- build:css(.tmp) css/main.css -->
         <link rel="stylesheet" href="/css/main.css">
         <!-- endbuild -->
 
@@ -71,7 +71,7 @@
         </div>
       </footer>
 
-      <!-- build:js(app) /js/vendor.js -->
+      <!-- build:js(app) js/vendor.js -->
       <!-- bower:js -->
       <script src="/_bower_components/jquery/dist/jquery.js"></script>
       <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
@@ -101,7 +101,7 @@
         ga('create','UA-XXXXX-X');ga('send','pageview');
       </script>
 
-      <!-- build:js(app) /js/scripts.js -->
+      <!-- build:js(app) js/scripts.js -->
       <script src="/js/main.js"></script>
       <!-- endbuild -->
     </body>
