--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) /css/vendor.css -->
+    <!-- build:css(.) css/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(.tmp) /css/main.css -->
+    <!-- build:css(.tmp) css/main.css -->
     <link rel="stylesheet" href="/css/main.css">
     <!-- endbuild -->
   </head>
@@ -79,7 +79,7 @@
     </footer>
 
 
-    <!-- build:js(app) /js/vendor.js -->
+    <!-- build:js(app) js/vendor.js -->
     <!-- bower:js -->
     <script src="/_bower_components/jquery/dist/jquery.js"></script>
     <script src="/_bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
@@ -109,7 +109,7 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <!-- build:js({app}) /js/scripts.js -->
+    <!-- build:js({app}) js/scripts.js -->
     <script src="/js/main.js"></script>
     <!-- endbuild -->
 </body>
