try to paralax bg cover pic

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -21,8 +21,8 @@
     <body>
 
       <header id="cover" class="home clearfix">
+        <div class="cover-pic"></div>
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
-
         <a href="#menu" id="menu-icon" class="white">Abrir Menu</a>
       </header>
 
