--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -18,6 +18,7 @@
   <body>
 
     <header id="cover" class="casa-do-povo clearfix {{ page.title || slugify:'pretty' }}">
+      <div class="cover-pic"></div>
       <div class="container text-center">
         <h1><a href="">{{ page.title }}</a></h1>
         <h2>{{ page.subtitle }}</h2>
