--- a/app/_scss/modules/_cover.scss
+++ b/app/_scss/modules/_cover.scss
@@ -5,10 +5,19 @@
   margin-bottom: 75px;
   position: relative;
 
+  .cover-pic {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    @include transform(scale(1.5) translateX(-50%) translateY(-50%));
+  }
+
   $covers-list: home, casa-do-povo;
 
   @each $cover in $covers-list {
-      &.#{$cover} {
+      &.#{$cover} .cover-pic {
           background: #FFF image-url("covers-hd/#{$cover}.jpg") no-repeat center;
           @include background-size(cover);
       }
