--- a/app/_scss/base/_base.scss
+++ b/app/_scss/base/_base.scss
@@ -3,3 +3,13 @@ body, html {
   margin: 0;
   padding: 0;
 }
+
+
+* {
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
+}
+
+html.touch * {
+  text-rendering: optimizeSpeed;
+}
