update places layout

--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="/css/main.css">
     <!-- endbuild -->
   </head>
-  <body>
+  <body id="place">
 
-    <header id="cover" class="casa-do-povo clearfix {{ page.title || slugify:'pretty' }}">
+    <header id="cover" class="clearfix {{ page.coverClass }}">
       <div class="cover-pic"></div>
       <div class="container text-center">
         <h1><a href="">{{ page.title }}</a></h1>
