--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -142,6 +142,8 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDigyBR5902gj0MQJBcgNi-jSDqs7zf67E&sensor=false"></script>
+
     <!-- build:js({app}) js/scripts.js -->
     <script src="/js/main.js"></script>
     <!-- endbuild -->
