--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -67,7 +67,7 @@
       <footer id="main">
         <div class="container">
           <p class="text-center">CENTRO – 2014-2015</p>
-          <p class="text-center">Criado no centro de São Paulo. Licenciado em Creative Commons.</p>
+          <p class="text-center">Criado no centro de São Paulo. Licenciado em <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons</a>.</p>
         </div>
       </footer>
 
