--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -104,10 +104,10 @@
 
 
         <div class="row">
-          <div class="col-md-12">
-            <p class="text-center">CENTRO — Criado no centro de São Paulo. Licenciado em Creative Commons. 2014-1015</p>
-          </div>
+          <p class="text-center">CENTRO – 2014-2015</p>
+          <p class="text-center">Criado no centro de São Paulo. Licenciado em <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons</a>.</p>
         </div>
+        
       </div>
     </footer>
 
@@ -142,7 +142,7 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDigyBR5902gj0MQJBcgNi-jSDqs7zf67E&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script>
 
     <!-- build:js({app}) js/scripts.js -->
     <script src="/js/main.js"></script>
