--- a/app/_scss/modules/_cover.scss
+++ b/app/_scss/modules/_cover.scss
@@ -5,21 +5,17 @@
   margin-bottom: 75px;
   position: relative;
 
-  .cover-pic {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    @include transform(scale(1.5) translateX(-50%) translateY(-50%));
-  }
-
   $covers-list: home, casa-do-povo;
 
   @each $cover in $covers-list {
-      &.#{$cover} .cover-pic {
-          background: #FFF image-url("covers-hd/#{$cover}.jpg") no-repeat center;
+      &.#{$cover} {
+          background: #FFF image-url("covers/#{$cover}.jpg") no-repeat center;
           @include background-size(cover);
+
+          @include retina() {
+            background: #FFF image-url("covers-hd/#{$cover}.jpg") no-repeat center;
+            @include background-size(cover);
+          }
       }
   }
 
@@ -42,7 +38,7 @@
   }
 
   h1 {
-    font: 400 100px "Plantin";
+    font: bold 100px "Plantin";
   }
 
   h2 {
