--- a/app/_scss/templates/_home.scss
+++ b/app/_scss/templates/_home.scss
@@ -34,7 +34,7 @@ main#main {
 
   .photo-hover {
     z-index: -1;
-    position: fixed;
+    position: absolute;
 
     @include transform(translateX(-50%) translateY(-50%));
   }
