--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -100,6 +100,8 @@
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','UA-XXXXX-X');ga('send','pageview');
       </script>
+      
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script>
 
       <!-- build:js(app) js/scripts.js -->
       <script src="/js/main.js"></script>
