add facebook link on menu.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -33,7 +33,7 @@
           <dt><a href="./">Início</a></dt>
         </dl>
         <dl>
-          <dt><a href="">Sobre</a></dt>
+          <dt><a href="#">Sobre</a></dt>
         </dl>
         <dl>
           <dt><a href="#">Projetos</a></dt>
@@ -46,12 +46,12 @@
           {% endsorted_for %}
         </dl>
         <dl>
-          <dt><a href="">Mapa</a></dt>
+          <dt><a href="#">Mapa</a></dt>
         </dl>
         <dl>
-          <dt><a href="">Contato</a></dt>
-          <dd><a href="">email</a></dd>
-          <dd><a href="">facebook</a></dd>
+          <dt><a href="#">Contato</a></dt>
+          <dd><a href="#">email</a></dd>
+          <dd><a target="_blank" href="https://www.facebook.com/centrocx">facebook</a></dd>
         </dl>
       </nav>
 
