add call to js files and refactoring to menu.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,11 +23,11 @@
       <header id="cover" class="home clearfix">
         <div class="cover-pic"></div>
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
-        <a href="#menu" id="menu-icon" class="white">Abrir Menu</a>
+        <a data-component="Toggle" data-target="#menu" href="#menu" id="menu-icon" class="white">Abrir Menu</a>
       </header>
 
       <nav id="menu">
-        <a href="" class="close">&times;</a>
+        <a data-component="Close" data-target="#menu" href="#" class="close">&times;</a>
 
         <dl>
           <dt><a href="./">Início</a></dt>
@@ -104,7 +104,23 @@
       <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script>
 
       <!-- build:js(app) js/scripts.js -->
+
+      <script src="/js/lib/sji.js"></script>
+      <script src="/js/lib/underscore.js"></script>
+      <script src="/js/lib/TweenMax.js"></script>
+      
+      <script src="/js/core/Alias.js"></script>
+      <script src="/js/core/Component.js"></script>
+      <script src="/js/core/ClientDetect.js"></script>
+      <script src="/js/core/Util.js"></script>
+      <script src="/js/core/Main.js"></script>
+      
+      <script src="/js/components/Toggle.js"></script>
+      <script src="/js/components/Close.js"></script>
+
+
       <script src="/js/main.js"></script>
+
       <!-- endbuild -->
     </body>
 </html>
