--- a/app/_scss/modules/_menu.scss
+++ b/app/_scss/modules/_menu.scss
@@ -12,7 +12,7 @@
   @include transform(translateX(100%));
   @include transition(transform .2s cubic-bezier(0.645, 0.045, 0.355, 1));
 
-  &.open {
+  &.is-active {
     @include transform(translateX(0));
   }
 
