--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,11 +23,11 @@
       <header id="cover" class="home clearfix">
         <div class="cover-pic"></div>
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
-        <a data-component="Toggle" data-target="#menu" href="#menu" id="menu-icon" class="white">Abrir Menu</a>
+        <a data-component="Toggle Menu" data-target="#menu" href="javascript:;" id="menu-icon" class="white">Abrir Menu</a>
       </header>
 
       <nav id="menu">
-        <a data-component="Close" data-target="#menu" href="#" class="close">&times;</a>
+        <a data-component="Close" data-target="#menu" href="javascript:;" class="close">&times;</a>
 
         <dl>
           <dt><a href="./">Início</a></dt>
@@ -117,6 +117,7 @@
       
       <script src="/js/components/Toggle.js"></script>
       <script src="/js/components/Close.js"></script>
+      <script src="/js/components/Menu.js"></script>
 
 
       <script src="/js/main.js"></script>
