add preloader with queryloader2 plugin.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -89,6 +89,7 @@
       <script src="/_bower_components/lodash/lodash.js"></script>
       <!-- endbower -->
       <script src="/_bower_components/preload/jquery.preload.js"></script>
+      <script src="/_bower_components/queryloader2/queryloader2.min.js"></script>
       <!-- endbuild -->
 
       <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -113,6 +114,7 @@
       <script src="/js/core/Component.js"></script>
       <script src="/js/core/ClientDetect.js"></script>
       <script src="/js/core/Util.js"></script>
+      <script src="/js/core/Preloader.js"></script>
       <script src="/js/core/Main.js"></script>
       
       <script src="/js/components/Toggle.js"></script>
