https://trello.com/c/xgmOHmyt/18-12-sublinhado-dos-links

--- a/app/_scss/base/_base.scss
+++ b/app/_scss/base/_base.scss
@@ -5,11 +5,11 @@ body, html {
 }
 
 
-* {
+/* * {
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: antialiased !important;
 }
 
 html.touch * {
   text-rendering: optimizeSpeed;
-}
+} */
