add share icons and updated menu component.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,7 +23,11 @@
       <header id="cover" class="home clearfix">
         <div class="cover-pic"></div>
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
-        <a data-component="Toggle Menu" data-target="#menu" href="javascript:;" id="menu-icon" class="white">Abrir Menu</a>
+        <a data-component="Toggle ToggleColor" data-target="#menu" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
+        <div class="share-options">
+          <a data-component="ToggleColor" class="share-link share-link__fb" href="javascript:;">facebook</a>
+          <a data-component="ToggleColor" class="share-link share-link__twitter" href="javascript:;">facebook</a>
+        </div>
       </header>
 
       <nav id="menu">
@@ -119,7 +123,7 @@
       
       <script src="/js/components/Toggle.js"></script>
       <script src="/js/components/Close.js"></script>
-      <script src="/js/components/Menu.js"></script>
+      <script src="/js/components/ToggleColor.js"></script>
 
 
       <script src="/js/main.js"></script>
