--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -16,6 +16,7 @@ $icon-font-path: "../_bower_components/bootstrap-sass-official/assets/fonts/boot
 @import "modules/footer";
 @import "modules/menu";
 @import "modules/details";
+@import "modules/share";
 
 @import "templates/home";
 
