--- a/app/_scss/modules/_cover.scss
+++ b/app/_scss/modules/_cover.scss
@@ -50,11 +50,11 @@
     top: 27px;
     right: 30px;
 
-    &.white {
+    &.light {
       @include sprites-general("menu-white");
     }
 
-    &.black {
+    &.dark {
       @include sprites-general("menu-black");
     }
   }
