update menu to toggle with hover event.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,15 +23,15 @@
       <header id="cover" class="home clearfix">
         <div class="cover-pic"></div>
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
-        <a data-component="Toggle ToggleColor" data-target="#menu" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
+        <a data-component="Toggle ToggleColor" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options">
           <a data-component="ToggleColor" class="share-link share-link__fb" href="javascript:;">facebook</a>
           <a data-component="ToggleColor" class="share-link share-link__twitter" href="javascript:;">facebook</a>
         </div>
       </header>
 
-      <nav id="menu">
-        <a data-component="Close" data-target="#menu" href="javascript:;" class="close">&times;</a>
+      <nav id="menu" data-component="Close" data-event="mouseleave">
+        <a data-target="#menu" href="javascript:;" class="close">&times;</a>
 
         <dl>
           <dt><a href="./">Início</a></dt>
