--- a/app/_scss/templates/_home.scss
+++ b/app/_scss/templates/_home.scss
@@ -2,6 +2,12 @@ main#main {
   margin-bottom: 125px;
   color: #000;
   font: 400 35px/50px "Dia";
+  opacity: 0;
+  @include transition(opacity .2s);
+
+  .loaded & {
+    opacity: 1;
+  }
 
   .container {
     z-index: 2;
