--- a/app/_scss/modules/_details.scss
+++ b/app/_scss/modules/_details.scss
@@ -106,3 +106,9 @@
     text-decoration: underline;
    }
 }
+
+#main .container {
+  @media (max-width: 1024px) {
+    padding-right: 80px;
+  }
+}
