add fade in content for internal pages.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -113,6 +113,7 @@
       <script src="/js/lib/sji.js"></script>
       <script src="/js/lib/underscore.js"></script>
       <script src="/js/lib/TweenMax.js"></script>
+      <script src="/js/lib/jquery.viewportchecker.min.js"></script>
       
       <script src="/js/core/Alias.js"></script>
       <script src="/js/core/Component.js"></script>
@@ -124,7 +125,6 @@
       <script src="/js/components/Toggle.js"></script>
       <script src="/js/components/Close.js"></script>
       <script src="/js/components/ToggleColor.js"></script>
-
 
       <script src="/js/main.js"></script>
 
