--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -153,6 +153,7 @@
       <script src="/js/lib/sji.js"></script>
       <script src="/js/lib/underscore.js"></script>
       <script src="/js/lib/TweenMax.js"></script>
+      <script src="/js/lib/jquery.viewportchecker.min.js"></script>
       
       <script src="/js/core/Alias.js"></script>
       <script src="/js/core/Component.js"></script>
@@ -164,7 +165,6 @@
       <script src="/js/components/Toggle.js"></script>
       <script src="/js/components/Close.js"></script>
       <script src="/js/components/ToggleColor.js"></script>
-
 
       <script src="/js/main.js"></script>
 
