fixes to build with correct paths.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -107,24 +107,23 @@
 
       <!-- build:js(app) js/scripts.js -->
 
-      <script src="/js/lib/sji.js"></script>
-      <script src="/js/lib/underscore.js"></script>
-      <script src="/js/lib/TweenMax.js"></script>
-      <script src="/js/lib/jquery.viewportchecker.min.js"></script>
+      <script src="js/lib/sji.js"></script>
+      <script src="js/lib/underscore.js"></script>
+      <script src="js/lib/TweenMax.js"></script>
+      <script src="js/lib/jquery.viewportchecker.min.js"></script>
       
-      <script src="/js/core/Alias.js"></script>
-      <script src="/js/core/Component.js"></script>
-      <script src="/js/core/ClientDetect.js"></script>
-      <script src="/js/core/Util.js"></script>
-      <script src="/js/core/Preloader.js"></script>
-      <script src="/js/core/Main.js"></script>
+      <script src="js/core/Alias.js"></script>
+      <script src="js/core/Component.js"></script>
+      <script src="js/core/ClientDetect.js"></script>
+      <script src="js/core/Util.js"></script>
+      <script src="js/core/Preloader.js"></script>
+      <script src="js/core/Main.js"></script>
       
-      <script src="/js/components/Toggle.js"></script>
-      <script src="/js/components/Close.js"></script>
-      <script src="/js/components/ToggleColor.js"></script>
+      <script src="js/components/Toggle.js"></script>
+      <script src="js/components/Close.js"></script>
+      <script src="js/components/ToggleColor.js"></script>
 
-      <!-- build:js(app) js/scripts.js -->
-      <script src="/js/main.js"></script>
+      <script src="js/main.js"></script>
 
       <!-- endbuild -->
     </body>
