removed maps api call.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -102,8 +102,8 @@
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','UA-XXXXX-X');ga('send','pageview');
       </script>
-      
-      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script>
+
+      <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script> -->
 
       <!-- build:js(app) js/scripts.js -->
 
@@ -111,14 +111,14 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
-      
+
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
       <script src="js/core/ClientDetect.js"></script>
       <script src="js/core/Util.js"></script>
       <script src="js/core/Preloader.js"></script>
       <script src="js/core/Main.js"></script>
-      
+
       <script src="js/components/Toggle.js"></script>
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
