--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -107,7 +107,7 @@
           <p class="text-center">CENTRO – 2014-2015</p>
           <p class="text-center">Criado no centro de São Paulo. Licenciado em <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons</a>.</p>
         </div>
-        
+
       </div>
     </footer>
 
@@ -143,7 +143,7 @@
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
 
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script>
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcHrA5A9--UmPLJpN47daL7AihSkNMABY&sensor=false"></script> -->
 
       <!-- build:js(app) js/scripts.js -->
 
@@ -151,14 +151,14 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
-      
+
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
       <script src="js/core/ClientDetect.js"></script>
       <script src="js/core/Util.js"></script>
       <script src="js/core/Preloader.js"></script>
       <script src="js/core/Main.js"></script>
-      
+
       <script src="js/components/Toggle.js"></script>
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
