--- a/app/_scss/modules/_menu.scss
+++ b/app/_scss/modules/_menu.scss
@@ -1,3 +1,5 @@
+
+
 #menu {
   position: fixed;
   top: 0;
@@ -52,5 +54,20 @@
         text-decoration: underline;
       }
     }
+  }
+}
+
+#menu-icon {
+  position: fixed;
+  z-index: 100;
+  top: 27px;
+  right: 30px;
+
+  &.light {
+    @include sprites-general("menu-white");
+  }
+
+  &.dark {
+    @include sprites-general("menu-black");
   }
 }
