--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -20,6 +20,7 @@ $icon-font-path: "../_bower_components/bootstrap-sass-official/assets/fonts/boot
 @import "modules/share";
 
 @import "templates/home";
+@import "templates/about";
 
 
 #map-container {
