small adjustment on logo

--- a/app/_scss/modules/_logo.scss
+++ b/app/_scss/modules/_logo.scss
@@ -29,4 +29,8 @@ h1#logo {
       }
     }
   }
+
+  @media (max-width: 600px) {
+    @include transform(translateX(-50%) translateY(-50%) scale(0.5));
+  } 
 }
