add zoom animation for cover region.

--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -18,7 +18,8 @@
   <body id="place">
 
     <header id="cover" class="clearfix {{ page.coverClass }}">
-      <div class="cover-pic"></div>
+      <div class="cover-pic" data-0="-moz-transform: scale(1); -ms-transform: scale(1); -webkit-transform: scale(1); transform: scale(1);" data-1000="t-moz-transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2);"></div>
+
       <div class="container text-center">
         <h1><a href="">{{ page.title }}</a></h1>
         <h2>{{ page.subtitle }}</h2>
@@ -162,6 +163,7 @@
       <script src="js/components/Toggle.js"></script>
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
+      <script src="js/lib/skrollr.min.js"></script>
 
       <script src="js/main.js"></script>
 
