--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -21,7 +21,8 @@
     <body>
 
       <header id="cover" class="home clearfix">
-        <div class="cover-pic"></div>
+        <div class="cover-pic" data-0="-moz-transform: scale(1); -ms-transform: scale(1); -webkit-transform: scale(1); transform: scale(1);" data-1000="t-moz-transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2);"></div>
+
         <h1 id="logo" class="hide"><a href="./">Centro</a></h1>
         <a data-component="Toggle ToggleColor" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="light">Abrir Menu</a>
         <div class="share-options">
@@ -111,6 +112,7 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
+      <script src="js/lib/skrollr.min.js"></script>
 
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
