fix anchor color on details

--- a/app/_scss/modules/_details.scss
+++ b/app/_scss/modules/_details.scss
@@ -1,6 +1,11 @@
 #main.details {
   margin-top: 45px;
   margin-bottom: 0;
+
+  a {
+    color: #000;
+  }
+
   p {
     margin-bottom: 50px;
     strong{
