Updated aligment to image caption.

--- a/app/_scss/modules/_details.scss
+++ b/app/_scss/modules/_details.scss
@@ -24,7 +24,10 @@
   }
 
   .caption {
+    display: block;
+    margin-top: 14px;
     font: 400 18px/20px "Dia"!important;
+
     &.left {
       &:before {
         content: "← ";
