Created fixed menu for home and places pages.

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -20,6 +20,10 @@
     </head>
     <body>
 
+      <div class="fixed-header" data-component="FixedHeader">
+        <strong>CENTRO</strong>
+      </div>
+
       <header id="cover" class="home clearfix">
         <div class="cover-pic" data-0="-moz-transform: scale(1); -ms-transform: scale(1); -webkit-transform: scale(1); transform: scale(1);" data-2500="t-moz-transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2);"></div>
 
@@ -100,6 +104,7 @@
       <script src="js/components/Toggle.js"></script>
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
+      <script src="js/components/FixedHeader.js"></script>
 
       <script src="js/main.js"></script>
 
