--- a/app/_layouts/place.html
+++ b/app/_layouts/place.html
@@ -17,6 +17,10 @@
   </head>
   <body id="place">
 
+    <div class="fixed-header" data-component="FixedHeader">
+      <strong>CENTRO</strong>
+    </div>
+
     <header id="cover" class="clearfix {{ page.coverClass }}">
       <div class="cover-pic" data-0="-moz-transform: scale(1); -ms-transform: scale(1); -webkit-transform: scale(1); transform: scale(1);" data-2500="t-moz-transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2); transform: scale(1.2);"></div>
 
@@ -128,6 +132,7 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
+      <script src="js/lib/skrollr.min.js"></script>
 
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
@@ -139,7 +144,7 @@
       <script src="js/components/Toggle.js"></script>
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
-      <script src="js/lib/skrollr.min.js"></script>
+      <script src="js/components/FixedHeader.js"></script>
 
       <script src="js/main.js"></script>
 
