--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -14,6 +14,7 @@ $icon-font-path: "../_bower_components/bootstrap-sass-official/assets/fonts/boot
 
 @import "modules/cover";
 @import "modules/logo";
+@import "modules/header";
 @import "modules/footer";
 @import "modules/menu";
 @import "modules/details";
