--- a/app/_layouts/about.html
+++ b/app/_layouts/about.html
@@ -18,6 +18,11 @@
         <!-- endbuild -->
     </head>
     <body>
+
+      <div class="fixed-header" data-component="FixedHeader">
+        <strong>CENTRO</strong>
+      </div>
+
       <header class="clearfix">
         <a data-component="Toggle" data-target="#menu" data-event="mouseover" href="javascript:;" id="menu-icon" class="dark">Abrir Menu</a>
         <div class="share-options">
@@ -78,6 +83,7 @@
       <script src="js/lib/underscore.js"></script>
       <script src="js/lib/TweenMax.js"></script>
       <script src="js/lib/jquery.viewportchecker.min.js"></script>
+      <script src="js/lib/skrollr.min.js"></script>
 
       <script src="js/core/Alias.js"></script>
       <script src="js/core/Component.js"></script>
@@ -89,6 +95,7 @@
       <script src="js/components/Toggle.js"></script>
       <script src="js/components/Close.js"></script>
       <script src="js/components/ToggleColor.js"></script>
+      <script src="js/components/FixedHeader.js"></script>
 
       <script src="js/main.js"></script>
 
