--- a/app/_includes/menu.html
+++ b/app/_includes/menu.html
@@ -3,7 +3,7 @@
 	  <dt><a href="./">Início</a></dt>
 	</dl>
 	<dl>
-	  <dt><a href="#">Sobre</a></dt>
+	  <dt><a href="./sobre.html">Sobre</a></dt>
 	</dl>
 	<dl>
 	  <dt><a href="#">Projetos</a></dt>
