--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -23,6 +23,29 @@ $icon-font-path: "../_bower_components/bootstrap-sass-official/assets/fonts/boot
 @import "templates/home";
 @import "templates/about";
 
+.f-right {
+  float: right;
+}
+
+.f-left {
+  float: left;
+}
+
+.mobile-only {
+  display: none !important;
+
+  @media (max-width: 768px) {
+    display: block !important;
+  }
+}
+
+.desktop-only {
+  display: block !important;
+
+  @media (max-width: 768px) {
+    display: none !important;
+  }
+}
 
 #map-container {
   height: 700px;
