--- a/app/_scss/modules/_details.scss
+++ b/app/_scss/modules/_details.scss
@@ -33,6 +33,12 @@
     margin-top: 14px;
     font: 400 18px/20px "Dia"!important;
 
+    &.top {
+      &:before {
+        content: "↑ ";
+      }
+    }
+
     &.left {
       &:before {
         content: "← ";
