--- a/app/_scss/templates/_about.scss
+++ b/app/_scss/templates/_about.scss
@@ -1,9 +1,14 @@
 
 #about {
   padding-top: 76px;
-  p {
-    font-weight: 600;
+  
+  @media (min-width: 768px) {
+    p {
+      font-weight: 600;
+    }
   }
+
+  
 }
 
 .authors {
