--- a/app/_scss/templates/_home.scss
+++ b/app/_scss/templates/_home.scss
@@ -5,9 +5,13 @@
 main#main {
   margin-bottom: 125px;
   color: #000;
-  font: 400 35px/50px "Dia";
+  font: 400 26px/35px "Dia";
   opacity: 0;
   @include transition(opacity .2s);
+
+  @media (min-width: 768px) {
+    font: 400 35px/50px "Dia";
+  }
 
   .loaded & {
     opacity: 1;
@@ -18,7 +22,9 @@ main#main {
   }
 
   .read-more {
-    font: 400 14px/50px "Dia";
+    @media (min-width: 768px) { 
+      font: 400 14px/50px "Dia";
+    }
     text-decoration: underline;
     text-transform: uppercase;
     color: #000;
@@ -26,7 +32,7 @@ main#main {
 
   .company {
     font-weight: 700;
-    font-size: 35px;
+    
     font-family: "Plantin";
     color: #000;
     border-bottom: 2px solid;
@@ -36,20 +42,28 @@ main#main {
     &:hover {
       text-decoration: none;
     }
+
+    @media (min-width: 768px) {
+      font-size: 35px;
+    }
   }
 
   .coordinates {
-    font: 400 14px/50px "Graphik";
+    @media (min-width: 768px) {
+      font: 400 14px/50px "Graphik";
+    }
   }
 
   .description {
-    font: 400 35px/50px "Plantin";
+    @media (min-width: 768px) {
+      font: 400 35px/50px "Plantin";
+    }
   }
   
   .disabled, .disabled .company, .disabled .coordinates {
     color: #d3d3d3!important;
   }
-
+@media (min-width: 768px) {
   .disabled:hover .company:after {
     content:"Em breve";
     position: absolute;
@@ -64,6 +78,7 @@ main#main {
     min-width: 160px;
     display: block;
   }
+}
 
   .photo-hover {
     z-index: -1;
